# var-examples

./: .rubocop.yml  .tool-versions  README.md
.github/workflows/: csharp-vstest.yml  go-gotest.yml  java-junit-gradle.yml  java-junit-maven.yml  kotlin-junit.yml  kotlin-kotest.yml  python-pytest.yml  python-unittest.yml  ruby-minitest.yml  ruby-rspec.yml  typescript-vitest.yml
csharp-vstest/: csharp-vstest.csproj
csharp-vstest/steps/: hello-var.steps.cs
go-gotest/: deep_thought.steps.go  go.mod  go.sum  hello_var.steps.go  library.steps.go  roman.go  roman_numerals.steps.go  specs_test.go  steps.go  tables_and_docstrings.steps.go  varar.config.json  yahtzee.go  yahtzee.steps.go
java-junit-gradle/: build.gradle.kts  var.config.json
java-junit-gradle/src/test/java/examples/: DeepThoughtSteps.java  HelloVarSteps.java  LibrarySteps.java  RomanNumeralsSteps.java  TablesAndDocStringsSteps.java
java-junit-maven/: pom.xml
java-junit-maven/src/test/java/examples/: DeepThoughtSteps.java  LibrarySteps.java  RomanNumeralsSteps.java  Yahtzee.java  YahtzeeSteps.java
kotlin-junit/: README.md  build.gradle.kts
kotlin-junit/src/test/kotlin/examples/: RunVarSpecsTest.kt  deep-thought.steps.kt  library.steps.kt  tables-and-docstrings.steps.kt  yahtzee.steps.kt
kotlin-kotest/: README.md  build.gradle.kts  var.config.json
kotlin-kotest/src/test/kotlin/examples/: hello-var.steps.kt  roman-numerals.steps.kt  yahtzee.steps.kt
python-pytest/: .gitignore  README.md  pyproject.toml
python-pytest/steps/: deep_thought.steps.py  library.steps.py  yahtzee.steps.py
python-unittest/: README.md  library.md  pyproject.toml
python-unittest/steps/: hello_var.steps.py  roman_numerals.steps.py  tables_and_docstrings.steps.py
ruby-minitest/: Gemfile  README.md
ruby-minitest/steps/: library.steps.rb  roman_numerals.steps.rb
ruby-rspec/: Gemfile  README.md
ruby-rspec/steps/: deep_thought.steps.rb  hello_var.steps.rb  tables_and_docstrings.steps.rb  yahtzee.steps.rb
rust-cargotest/: Cargo.toml  README.md  varar.config.json
rust-cargotest/src/: lib.rs  library.rs
rust-cargotest/src/steps/: library.steps.rs  mod.rs
typescript-vitest/: .gitignore  README.md  package.json  pnpm-workspace.yaml  tables-and-docstrings.md
typescript-vitest/steps/: airport.steps.ts  deep-thought.steps.ts  hello-var.steps.ts  library.steps.ts  return-sensor.steps.ts  roman-numerals.steps.ts  tables-and-docstrings.steps.ts  yahtzee.steps.ts  yahtzee.ts
