[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "var-example-python-pytest"
version = "0.0.1"
description = "Standalone sample: run Markdown specs as pytest tests with Vár"
requires-python = ">=3.12"
dependencies = ["pytest>=8", "pytest-var==0.3.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/roman_numerals_example", "src/yahtzee_example"]

[tool.pytest.ini_options]
addopts = "--rootdir=."
testpaths = ["."]
