[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "var-example-python-unittest"
version = "0.0.1"
description = "Standalone sample: run Markdown specs as unittest tests with Vár"
requires-python = ">=3.12"
dependencies = ["oselvar-var-unittest==0.3.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/roman_numerals_example", "src/yahtzee_example"]
