[package]
name = "varar-example-rust-cargotest"
version = "0.0.1"
edition = "2024"
publish = false
description = "Standalone sample: run Markdown specs as `cargo test` tests with Varar"

# In this monorepo the Varar crates resolve from source (path deps), so the sample
# gates trunk against the local build. A real project depends on the published
# crates instead.
[dependencies]
# The engine (steps are authored against it) and the cargo-test adapter.
varar-core = "0.6.1"
varar-cargotest = "0.6.1"
# The ergonomic author facade (`varar::Steps`), used by the step definitions.
varar = "0.6.1"
# The library sample's domain type for dates.
chrono = "0.4"

[dev-dependencies]
# The `unit` test drives discovery and a single example directly.
varar-config = "0.6.1"
varar-runner = "0.6.1"

[lib]
name = "example"
path = "src/lib.rs"

# The specs run through the varar-cargotest adapter, which owns the libtest
# harness — hence `harness = false` and a `main` in tests/specs.rs.
[[test]]
name = "specs"
path = "tests/specs.rs"
harness = false

[[test]]
name = "unit"
path = "tests/unit.rs"
